--- a/main.css
+++ b/main.css
@@ -26,6 +26,9 @@ html {
   padding: 0.75em 3em;
   border-radius: 3px; }
 
+.button {
+  padding-top: 3em; }
+
 .navSection {
   width: 100%;
   display: inline-block;
@@ -76,7 +79,7 @@ html {
   font-size: 30px;
   font-weight: 200;
   color: #455A64;
-  margin: 1em 0 1.5rem 0;
+  margin: 1em 0 1rem 0;
   line-height: 36px; }
 
 /*# sourceMappingURL=main.css.map */
